Change background position to ensure no overflow

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   height: 100vh;
   width: 100vw;
   transition: filter 0.3s ease-in;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 .main-background.blur::after {
